fix layout issues

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -91,9 +91,10 @@ h3.page-heading{
 
 .project-list{
     li{
-        margin-bottom: 2em;
+        margin-bottom: 3em;
         img{
             border: 5px solid #fff;
+            margin-bottom: .75em;
         }
     }
     a{
